--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>O nama</h2>
-            <p>Karate klub Susedgrad ima 25-godišnju tradiciju podučavanja karatea i stvaranja vrhunskih sportaša.
+            <p>Zagrebački Karate klub Susedgrad ima 25-godišnju tradiciju podučavanja karatea i stvaranja vrhunskih sportaša.
 Naš je cilj svakome članu pomoći ostvariti njegov optimalan sportski razvoj te uz to prenijeti vrijednosti koje su važan dio ove vještine. 
 Rad na karate tehnici uz fizičku kondiciju, razvija koordinaciju i sklad cijelog tijela. Pravilnim pristupom karateu, radimo i na samodisciplini, koncentraciji te razvijamo poštovanje prema drugima i sebi.</p>
           </div>
@@ -307,7 +307,7 @@ Rad na karate tehnici uz fizičku kondiciju, razvija koordinaciju i sklad cijelo
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Adresa</h3>
-              <address>bla bla bla</address>
+              <address>...</address>
             </div>
           </div>
 
@@ -341,7 +341,7 @@ Rad na karate tehnici uz fizičku kondiciju, razvija koordinaciju i sklad cijelo
   <footer id="footer">
    
     <div class="container">
-      <div class="copyright"><strong>Karate Klub Susedgrad</strong></div> 
+      <div class="copyright"><strong>Karate klub Susedgrad</strong></div> 
    </div>
   </footer><!-- #footer -->
 
