--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="#about">O nama</a></li>
+          <li class="menu-active"><a href="#about">O nama</a></li>
           <li><a href="#schedule">Treninzi</a></li>
           <li><a href="#venue">Kako do nas?</a></li>
           <li><a href="#subscribe">Kontakti</a></li>
