fix : tab image and tab name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TheEvent - Bootstrap Event Template</title>
+  <title>Karate klub Susedgrad</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -65,7 +65,7 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">Karate Klub Susedgrad<br></h1>
+      <h1 class="mb-4 pb-0">Karate klub Susedgrad<br></h1>
       <h1 class="mb-4 pb-0">空<br>手<br></h1>
     </div>
   </section>
@@ -82,7 +82,7 @@
             <h2>O nama</h2>
             <p>Zagrebački Karate klub Susedgrad ima 25-godišnju tradiciju podučavanja karatea i stvaranja vrhunskih sportaša.
 Naš je cilj svakome članu pomoći ostvariti njegov optimalan sportski razvoj te uz to prenijeti vrijednosti koje su važan dio ove vještine. 
-Rad na karate tehnici uz fizičku kondiciju, razvija koordinaciju i sklad cijelog tijela. Pravilnim pristupom karateu, radimo i na samodisciplini, koncentraciji te razvijamo poštovanje prema drugima i sebi.</p>
+Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijelog tijela. Pravilnim pristupom karateu, radimo i na samodisciplini, koncentraciji te razvijamo poštovanje prema drugima i sebi.</p>
           </div>
           <div class="col-lg-3">
           </div>
