remove : adress in contact

--- a/index.html
+++ b/index.html
@@ -124,17 +124,13 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
             </br><h3 class="sub-heading">Početnici treniraju dva puta tjedno:</h3>
 
             <div class="row schedule-item">
-              <div class="col"></div>
               <div class="col"><h4 style="text-align:right;">Utorkom</h4></div>
-              <div class="col"><p>20:00 - 21:00</p></div>
-              <div class="col"></div>
+              <div class="col"><p style="text-align:left;">20:00 - 21:00</p></div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col"></div>
               <div class="col"><h4 style="text-align:right;">Četvrtkom</h4></div>
-              <div class="col"><p>20:00 - 21:00</p></div>
-              <div class="col"></div>
+              <div class="col"><p style="text-align:left;">20:00 - 21:00</p></div>
             </div>
 
             <h3 class="sub-heading"></br>Niste sigurni kako izgledaju treninzi karatea? Dođite na probni trening!</h3>
@@ -303,15 +299,7 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
 
         <div class="row contact-info">
 
-          <div class="col-md-4">
-            <div class="contact-address">
-              <i class="ion-ios-location-outline"></i>
-              <h3>Adresa</h3>
-              <address>...</address>
-            </div>
-          </div>
-
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Telefon</h3>
@@ -319,7 +307,7 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
