--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
           </div>
           <div class="col-lg-3">
             <h3><br><br>Trener:</h3>
-            <p>Nediljko Piplica<br>6. DAN</p>
+            <p>Nediljko Piplica<br></p>
           </div>
         </div>
       </div>
@@ -102,9 +102,9 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h2>Treninzi</h2>
-          <p>Treninzi se održavaju u dvorani Osnovne škole ban Josip Jelačić u Podsusedu te ponovno počinju 7. rujna 2020.</p>
+          <p>Treninzi se održavaju u dvorani Osnovne škole ban Josip Jelačić u Podsusedu te ponovno počinju 15. rujna 2020.</p>
 
-        </br><p style="color:red;">COVID-19: Održavanje treninga i način treniranja će se prilagođavati preporučenim mjerama prevencije Ministarstva zdravstva Republike Hrvatske. U slučaju nemogućnosti treniranja, iznos članarine će biti prilagođen ili vraćen.</p></br>
+        </br><p style="color:red;">COVID-19: Održavanje treninga i način treniranja će se prilagođavati preporučenim mjerama prevencije Nacionalnog stožera. U slučaju nemogućnosti treniranja, iznos naknade za trening će biti prilagođen ili vraćen.</p></br>
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
