--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h2>Treninzi</h2>
-          <p>Treninzi se održavaju u dvorani Osnovne škole ban Josip Jelačić u Podsusedu te ponovno počinju 15. rujna 2020.</p>
+          <p>Treninzi se održavaju u dvorani Osnovne škole bana Josip Jelačić u Podsusedu te ponovno počinju 15. rujna 2020.</p>
 
         </br><p style="color:red;">COVID-19: Održavanje treninga i način treniranja će se prilagođavati preporučenim mjerama prevencije Nacionalnog stožera. U slučaju nemogućnosti treniranja, iznos naknade za trening će biti prilagođen ili vraćen.</p></br>
         </div>
@@ -161,12 +161,14 @@ Rad na karate tehnici, uz fizičku kondiciju, razvija koordinaciju i sklad cijel
 
         <div class="section-header">
           <h2>Kako do nas?</h2>
-          <p>OŠ ban Josip Jelačić, Podsusedski trg 23, Zagreb</p>
+          <p>OŠ bana Josip Jelačić, Podsusedski trg 23, Zagreb</p>
         </div>
 
         <div class="row no-gutters">
           <div class="col-lg-12 venue-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3932.4976007666232!2d15.83231817511618!3d45.81735196122024!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d1ddda247b75%3A0xaba663f641da140e!2sOsnovna%20%C5%A1kola%20bana%20Josipa%20Jela%C4%8Di%C4%87a!5e0!3m2!1sen!2sfr!4v1598714203884!5m2!1sen!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3932.4976007666232!2d15.83231817511618!3d45.81735196122024!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d1ddda247b75%3A0xaba663f641da140e!2sOsnovna%20%C5%A1kola%20
+                         
+                         a%20Josipa%20Jela%C4%8Di%C4%87a!5e0!3m2!1sen!2sfr!4v1598714203884!5m2!1sen!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
         </div>
 
